Debug MRDO, added X2 ANN.