@@ -21,21 +21,21 @@ import calsim.surrogate.examples.EmmatonExampleTensorFlowANN;
 import calsim.surrogate.SalinitySurrogateManager;
 
 
-public class Functionsurrogateec extends ExternalFunction{
+public class Functionsurrogatex2 extends ExternalFunction{
 	private final boolean DEBUG = false;
 	private static int cpuTime=0;
 	private static int nCalls=0;
 	private SalinitySurrogateManager ssm;
 
-	public Functionsurrogateec(){
+	public Functionsurrogatex2(){
 		long t1 = Calendar.getInstance().getTimeInMillis();
 		
 		ssm=SalinitySurrogateSetup.getManager();
 		long t2 = Calendar.getInstance().getTimeInMillis();
 		cpuTime=cpuTime+(int) (t2-t1);
 		nCalls++;
-		TimeUsage.cpuTimeMap.put("surrogateec", cpuTime);
-		TimeUsage.nCallsMap.put("surrogateec", nCalls);
+		TimeUsage.cpuTimeMap.put("surrogatex2", cpuTime);
+		TimeUsage.nCallsMap.put("surrogatex2", nCalls);
 	}
 
 	public void execute(Stack stack) {
@@ -43,19 +43,17 @@ public class Functionsurrogateec extends ExternalFunction{
 		long t1 = Calendar.getInstance().getTimeInMillis();
 		
 		//values in reverse order:
-		Object param11 = stack.pop();
-		Object param10 = stack.pop();
-		Object param9 = stack.pop();
-		//Object param8 = stack.pop();
-		Object param7 = stack.pop();
-		Object param6 = stack.pop();
-		Object param5 = stack.pop();
-		Object param4 = stack.pop();
-		Object param3 = stack.pop();
-		Object param2 = stack.pop();
-		Object param1 = stack.pop();
+		Object param12 = stack.pop(); //aggParam
+		Object param11 = stack.pop(); //year
+		Object param10 = stack.pop(); //month
+		Object param9 = stack.pop();  //ave_type
+		//Object param8 = stack.pop(); 
+		Object param7 = stack.pop();  //location
+		Object param6 = stack.pop();  // smscg
+		Object param1 = stack.pop();  // ndoi
 
 		//cast params to correct types:
+		double aggParam = ((Number) param12).doubleValue();
 		int year = ((Number) param11).intValue();
 		int month = ((Number) param10).intValue();
 		int ave_type = ((Number) param9).intValue();
@@ -67,80 +65,47 @@ public class Functionsurrogateec extends ExternalFunction{
 		for (int i=0; i<size_smscg; i++){
 			smscg[i]=smscg_Arr[i].doubleValue();
 		}
-		Number[] sjr_Arr = (Number[])param5;
-		int size_sjr=sjr_Arr.length;
-		double[] sjr=new double[size_sjr];
-		for (int i=0; i<size_sjr; i++){
-			sjr[i]=sjr_Arr[i].doubleValue();
+		Number[] ndoi_Arr = (Number[])param1;
+		int size_ndoi=ndoi_Arr.length;
+		double[] ndoi=new double[size_ndoi];
+		for (int i=0; i<size_ndoi; i++){
+			ndoi[i]=ndoi_Arr[i].doubleValue();
 		}
-		Number[] net_dcd_Arr = (Number[])param4;
-		int size_net_dcd=net_dcd_Arr.length;
-		double[] net_dcd=new double[size_net_dcd];
-		for (int i=0; i<size_net_dcd; i++){
-			net_dcd[i]=net_dcd_Arr[i].doubleValue();
-		}
-		Number[] dcc_Arr = (Number[])param3;
-		int size_dcc=dcc_Arr.length;
-		double[] dcc=new double[size_dcc];
-		for (int i=0; i<size_dcc; i++){
-			dcc[i]=dcc_Arr[i].doubleValue();
-		}
-		Number[] exp_Arr = (Number[])param2;
-		int size_exp=exp_Arr.length;
-		double[] exp=new double[size_exp];
-		for (int i=0; i<size_exp; i++){
-			exp[i]=exp_Arr[i].doubleValue();
-		}
-		Number[] sac_Arr = (Number[])param1;
-		int size_sac=sac_Arr.length;
-		double[] sac=new double[size_sac];
-		for (int i=0; i<size_sac; i++){
-			sac[i]=sac_Arr[i].doubleValue();
-		}
-
-		float result = surrogateec(sac, exp, dcc, net_dcd, sjr, smscg, location, ave_type, month, year);
+        // location might be omitted? It is X2
+		float result = surrogatex2(ndoi, smscg, location, ave_type, month, year, aggParam);
 
 		// push the result on the Stack
-		stack.push(Double.valueOf(result));
+		stack.push(new Double(result));
 		
 		long t2 = Calendar.getInstance().getTimeInMillis();
 		cpuTime=cpuTime+(int) (t2-t1);
 		nCalls++;
-		TimeUsage.cpuTimeMap.put("surrogateec", cpuTime);
-		TimeUsage.nCallsMap.put("surrogateec", nCalls);
+		TimeUsage.cpuTimeMap.put("surrogatex2", cpuTime);
+		TimeUsage.nCallsMap.put("surrogatex2", nCalls);
 	}
 
-	public float surrogateec(double[] sac, double[] exp, double[] dcc, double[] net_dcd, double[] sjr, double[] smscg, 
-			int location, int ave_type, int month, int year){	
+	public float surrogatex2(double[] ndoi, double[] smscg, 
+			int location, int ave_type, int month, int year, double aggParam){	
 		
-		double[][] sac1 = { sac };
-		double[][] exp1 = { exp };
-
-		double[][] dcc1 = { dcc };
-		double[][] net_dcd1 = { net_dcd };
-		double[][] sjr1 = { sjr };
+		double[][] ndoi1 = { ndoi };
 		double[][] tide_energy = { { 6.560, 6.184, 5.508, 5.083, 6.913 } };
 		double[][] tide_filter = { { 1. ,1. , 1., 1., 1. } };
 		double[][] smscg1 = { smscg };
 		
 		if (DEBUG){
-			System.out.println("sac " + Arrays.toString(sac));
+			System.out.println("ndoi " + Arrays.toString(ndoi));
 			System.out.println("smscg " + Arrays.toString(smscg));
 			System.out.println("Month " + month);
 			System.out.println("Year " + year);
 		}
 		
 		ArrayList<double[][]> floatInput = new ArrayList<double[][]>();
-		floatInput.add(sac1);
-		floatInput.add(exp1);
-		floatInput.add(sjr1);
-		floatInput.add(net_dcd1);
+		floatInput.add(ndoi1);
 		floatInput.add(tide_energy);
 		floatInput.add(tide_filter);	
-		floatInput.add(dcc1);		
 		floatInput.add(smscg1);
 
-		float out = ssm.annEC(floatInput, location, ave_type, month, year);
+		float out = ssm.annEC(floatInput, location, ave_type, month, year,aggParam);
 		return out;
 	}
 }
